2008-05-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle): Fix possible warnings
	when the URL doesn't have any local paths. Remove some useless
	condition in the GStreamer backend, there was no MRL, we remove it a
	few lines before

2008-05-04  Bastien Nocera  <hadess@hadess.net>

	* src/backend/video-utils.c (totem_display_is_local):
	Fix string checking, spotted by Will Thompson
	<will@willthompson.co.uk> (Closes: #531261)

2008-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (reset_seek_status), (totem_action_error),
	(totem_action_error_and_exit), (totem_action_seek):
	When an async error occurs during seeking, reset the seeking status
	to avoid being stuck seeking (this already worked for the xine-lib
	backend as the seeking is synchronous, GStreamer's is async)

2008-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	Remove useless g_free(), if there's a MRL stored, it will
	be freed in _close()

2008-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_strdupnv), (bacon_video_widget_get_mrls):
	Make sure we store URIs as the MRL, not local paths, fixes
	direct seeking not working on local files
	Fix a few compilation warnings in the xine-lib backend

2008-04-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c: Add missing include

2008-04-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle):
	Try to get a local filename when possible, as there's no gio input
	plugin for xine-lib (Closes: #528763)
