@@ -1,3 +1,11 @@
+2008-05-08  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemBasicPlugin.cpp: Add Totem specific
+	application/x-totem-plugin mime-type (Closes: #531734)
+
+	* browser-plugin/totemPluginGlue.cpp: Use GIO to get the description
+	of mime-types
+
 2008-05-05  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c
